level3 without put

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,11 @@
 {
+  "ConnectionStrings": {
+    "SqlServerConnection" : "Server=localhost; Database=Pizza; User Id=SA; PWD=yourStrong(!)Password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   },
   "AllowedHosts": "*"
